<resources>
    <string name="app_name">BibUntitled</string>
    <string name="contact_fragment">Contact Fragment</string>
    <string name="plattegrond_fragment">Plattegrond Fragment</string>
    <string name="info_fragment">Info Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="game_fragment">Game Fragment</string>
    <string name="game">Game</string>
    <string name="plattegrond">Plattegrond</string>
    <string name="contact">Contact</string>
    <string name="info">Info</string>
    <string name="volgende_vraag">Volgende vraag</string>
    <string name="start_spel">Start Spel</string>
    <string name="spelcode">Spelcode</string>
    <string name="contactTitle">Contact campusbibliotheek Kortrijk</string>
    <string name="next">next</string>
    <string name="richting">richting</string>
    <string name="achternaam">achternaam</string>
    <string name="voornaam">voornaam</string>
    <string name="gebruikersnaam">gebruikersnaam</string>
    <string name="email">E-mailadres</string>
    <string name="wachtwoord">wachtwoord</string>
    <string name="bevestigWachtwoord">bevestig wachtwoord</string>
    <string name="team_name">Team naam</string>
    <string name="hint_invul_question">Vul hier je antwoord in</string>
    <string name="login">Login</string>
    <string name="registreren">Registreren</string>
    <string name="register">register</string>
    <string name="BIBUNTITLED">BibUntitled</string>
    <string name="invalid_email">format wrong</string>
    <string name="field_required">field qpmpry</string>
    <string name="nieuws">Nieuws</string>
    <string name="lees_meer">Lees meer</string>
    <string name="vraag">Vraag %s/%s</string>
    <string name="tip">Tip: %s</string>
    <string name="no_answer_given">Geen antwoord opgegeven</string>
    <string name="incorrect_code">Spelcode incorrect</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    <string name="confirm_leave_game_title">Ben je zeker dat je het spel wil verlaten?</string>
    <string name="confirm_leave_game_text">Je vooruitgang wordt niet opgeslaan en je kan het spel niet hervatten.</string>
    <string name="points">Punten: +%s</string>
    <string name="correct">juist</string>
    <string name="incorrect">fout</string>
    <string name="validate_question">controlleer</string>
    <string name="TitelInfoBib">Openingsuren campusbibliotheek Kortrijk</string>
    <string name="logo_van_vives">Logo van Vives</string>
    <string name="team_naam">Team naam</string>
    <string name="start_button">Start!</string>
    <string name="team_naam_titel">Wat is uw teamnaam?</string>
    <string name="aantal_leden_titel">Hoeveel leden zitten er in uw team?</string>
    <string name="chat">chat</string>
    <string name="chat_verstuur">Verstuur</string>
    <string name="chat_bericht_input">Bericht</string>
    <string name="home">Home</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="team">Team</string>
</resources>
