<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_game"
        android:icon="@drawable/ic_videogame_asset_black_24dp"
        android:title="@string/game"/>
    <item
        android:id="@+id/nav_plattegrond"
        android:icon="@drawable/ic_navigation_black_24dp"
        android:title="@string/plattegrond"/>
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/contact"/>
    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/info" />
</menu>