<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ScoreboardFragment">

    <data>
        <variable
            name="viewModel"
            type="be.vives.ti.bibuntitled.ui.scoreboard.ScoreboardViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:layout_margin="0dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="24sp"
            >
        </TextView>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/team"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="20sp"
           />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/score"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="20sp"
          />

    </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:scrollbars="vertical"
           >
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:orientation="horizontal"

               >

                <TextView
                    android:id="@+id/tvRanking"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="23sp"
                    tools:text="@tools:sample/lorem/random"
                   />

                <TextView
                    android:id="@+id/tvTeamnaam"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textSize="23sp"
                    tools:text="@tools:sample/lorem/random"
                    />

                <TextView
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/tvScore"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="23sp"
                    tools:text="@tools:sample/lorem/random"

                    />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/home"
            style="@style/a"
            android:layout_height="54dp"
            android:layout_margin="50dp"
            android:text="@string/home" />

    </LinearLayout>
</layout>