<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="be.vives.ti.bibuntitled.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_info"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:context=".ui.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvError"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/progressBar" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <EditText
            android:textAlignment="center"
            android:layout_gravity="center"
            android:id="@+id/gebruikersnaam"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/input_field"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/wachtwoord"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/input_field"
            android:hint="@string/wachtwoord"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginBtn"
            android:text="@string/login"
            style="@style/a" />

        <Button
            android:layout_gravity="center"
            android:id="@+id/registerBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_backgroud_change"
            android:paddingStart="5sp"
            android:paddingEnd="5sp"
            android:text="@string/registreren"
            android:textColor="@color/white" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>
</layout>